--- a/themes/webclicker-usask.css
+++ b/themes/webclicker-usask.css
@@ -13,6 +13,21 @@
 /* Swatches */
 /* A
 -----------------------------------------------------------------------------------------------------------*/
+/* Style sheet to restrict the page on large browsers */
+
+html { background-color: #333; }
+/* this line detects browsers which have a minimum width of 600
+ * pixels and only applies the changes to them */
+@media only screen and (min-width: 600px){
+	.ui-page {
+	width: 600px !important;
+	margin: 0 auto !important;
+	position: relative !important;
+	border-right: 5px #666 outset !important;
+	border-left: 5px #666 outset !important;
+	}
+}
+
 .ui-bar-a {
 	border: 1px solid #bfbfbf /*{a-bar-border}*/;
 	background: #f4f4f4 /*{a-bar-background-color}*/;
