--- a/themes/WebClicker_main.css
+++ b/themes/WebClicker_main.css
@@ -9,6 +9,7 @@
 *
 */
 
+/* http://jquerymobile.com/themeroller/?ver=1.3.2&style_id=20131115-75
 
 /* this line detects browsers which have a minimum width of 600
 * pixels and only applies the changes to them */
@@ -20,6 +21,15 @@
 	border-right: 5px #666 outset !important;
 	border-left: 5px #666 outset !important;
 	}
+}
+
+input, textarea {
+		background-color : #F8F8FF;
+}
+.error {
+	text-align:center;
+	color: red;
+	font-weight:bold;
 }
 
 /* Swatches */
@@ -66,13 +76,13 @@
 	border: 1px solid #000000 /*{a-body-border}*/;
 	color: #000000 /*{a-body-color}*/;
 	text-shadow: 0 /*{a-body-shadow-x}*/ 1px /*{a-body-shadow-y}*/ 0 /*{a-body-shadow-radius}*/ #eeeeee /*{a-body-shadow-color}*/;
-	background: #DBAF67 /*{a-body-background-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #f0c071 /*{a-body-background-start}*/), to( #c59d5c /*{a-body-background-end}*/)); /* Saf4 , Chrome */
-	background-image: -webkit-linear-gradient( #f0c071 /*{a-body-background-start}*/, #c59d5c /*{a-body-background-end}*/); /* Chrome 10 , Saf5.1  */
-	background-image:    -moz-linear-gradient( #f0c071 /*{a-body-background-start}*/, #c59d5c /*{a-body-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #f0c071 /*{a-body-background-start}*/, #c59d5c /*{a-body-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #f0c071 /*{a-body-background-start}*/, #c59d5c /*{a-body-background-end}*/); /* Opera 11.10  */
-	background-image:         linear-gradient( #f0c071 /*{a-body-background-start}*/, #c59d5c /*{a-body-background-end}*/);
+	background: #d1d1d1 /*{a-body-background-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #e5e5e5 /*{a-body-background-start}*/), to( #bcbcbc /*{a-body-background-end}*/)); /* Saf4 , Chrome */
+	background-image: -webkit-linear-gradient( #e5e5e5 /*{a-body-background-start}*/, #bcbcbc /*{a-body-background-end}*/); /* Chrome 10 , Saf5.1  */
+	background-image:    -moz-linear-gradient( #e5e5e5 /*{a-body-background-start}*/, #bcbcbc /*{a-body-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #e5e5e5 /*{a-body-background-start}*/, #bcbcbc /*{a-body-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #e5e5e5 /*{a-body-background-start}*/, #bcbcbc /*{a-body-background-end}*/); /* Opera 11.10  */
+	background-image:         linear-gradient( #e5e5e5 /*{a-body-background-start}*/, #bcbcbc /*{a-body-background-end}*/);
 }
 .ui-overlay-a {
 	background-image: none;
@@ -138,21 +148,21 @@
 }
 .ui-btn-down-a {
 	border: 1px solid #000000 /*{a-bdown-border}*/;
-	background: #737373 /*{a-bdown-background-color}*/;
+	background: #4e4646 /*{a-bdown-background-color}*/;
 	font-weight: bold;
-	color: #eb6f6f /*{a-bdown-color}*/;
+	color: #ffffff /*{a-bdown-color}*/;
 	text-shadow: 0 /*{a-bdown-shadow-x}*/ 0 /*{a-bdown-shadow-y}*/ 0 /*{a-bdown-shadow-radius}*/ #ffffff /*{a-bdown-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #5a5a5a /*{a-bdown-background-start}*/), to( #8b8b8b /*{a-bdown-background-end}*/)); /* Saf4 , Chrome */
-	background-image: -webkit-linear-gradient( #5a5a5a /*{a-bdown-background-start}*/, #8b8b8b /*{a-bdown-background-end}*/); /* Chrome 10 , Saf5.1  */
-	background-image:    -moz-linear-gradient( #5a5a5a /*{a-bdown-background-start}*/, #8b8b8b /*{a-bdown-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #5a5a5a /*{a-bdown-background-start}*/, #8b8b8b /*{a-bdown-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #5a5a5a /*{a-bdown-background-start}*/, #8b8b8b /*{a-bdown-background-end}*/); /* Opera 11.10  */
-	background-image:         linear-gradient( #5a5a5a /*{a-bdown-background-start}*/, #8b8b8b /*{a-bdown-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #4e4646 /*{a-bdown-background-start}*/), to( #4e4646 /*{a-bdown-background-end}*/)); /* Saf4 , Chrome */
+	background-image: -webkit-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* Chrome 10 , Saf5.1  */
+	background-image:    -moz-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* Opera 11.10  */
+	background-image:         linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/);
 }
 .ui-btn-down-a:visited,
 .ui-btn-down-a:hover,
 .ui-btn-down-a a.ui-link-inherit {
-	color: #eb6f6f /*{a-bdown-color}*/;
+	color: #ffffff /*{a-bdown-color}*/;
 }
 .ui-btn-up-a,
 .ui-btn-hover-a,
