--- a/themes/WebClicker_main.css
+++ b/themes/WebClicker_main.css
@@ -9,7 +9,7 @@
 *
 */
 
-/* http://jquerymobile.com/themeroller/?ver=1.3.2&style_id=20131115-75
+/* http://jquerymobile.com/themeroller/?ver=1.3.2&style_id=20131115-79 */
 
 /* this line detects browsers which have a minimum width of 600
 * pixels and only applies the changes to them */
@@ -30,6 +30,16 @@ input, textarea {
 	text-align:center;
 	color: red;
 	font-weight:bold;
+}
+h4{
+	color : #B72E22;
+}
+.bordered{
+	padding: 20px;
+	border:1px solid;
+	border-radius:10px;
+	box-shadow: 1px 1px 3px #888888;
+	margin: 10px;
 }
 
 /* Swatches */
@@ -69,7 +79,7 @@ input, textarea {
 .ui-bar-a select,
 .ui-bar-a textarea,
 .ui-bar-a button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-a,
 .ui-overlay-a {
@@ -93,7 +103,7 @@ input, textarea {
 .ui-body-a select,
 .ui-body-a textarea,
 .ui-body-a button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-a .ui-link-inherit {
 	color: #000000 /*{a-body-color}*/;
@@ -113,16 +123,16 @@ input, textarea {
 }
 .ui-btn-up-a {
 	border: 1px solid #828282 /*{a-bup-border}*/;
-	background: #d9d9d8 /*{a-bup-background-color}*/;
+	background: #f9f9f6 /*{a-bup-background-color}*/;
 	font-weight: bold;
 	color: #181d20 /*{a-bup-color}*/;
 	text-shadow: 0 /*{a-bup-shadow-x}*/ 1px /*{a-bup-shadow-y}*/ 0 /*{a-bup-shadow-radius}*/ #ffffff /*{a-bup-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #d9d9d8 /*{a-bup-background-start}*/), to( #d9d9d8 /*{a-bup-background-end}*/)); /* Saf4 , Chrome */
-	background-image: -webkit-linear-gradient( #d9d9d8 /*{a-bup-background-start}*/, #d9d9d8 /*{a-bup-background-end}*/); /* Chrome 10 , Saf5.1  */
-	background-image:    -moz-linear-gradient( #d9d9d8 /*{a-bup-background-start}*/, #d9d9d8 /*{a-bup-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #d9d9d8 /*{a-bup-background-start}*/, #d9d9d8 /*{a-bup-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #d9d9d8 /*{a-bup-background-start}*/, #d9d9d8 /*{a-bup-background-end}*/); /* Opera 11.10  */
-	background-image:         linear-gradient( #d9d9d8 /*{a-bup-background-start}*/, #d9d9d8 /*{a-bup-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #f9f9f6 /*{a-bup-background-start}*/), to( #f9f9f6 /*{a-bup-background-end}*/)); /* Saf4 , Chrome */
+	background-image: -webkit-linear-gradient( #f9f9f6 /*{a-bup-background-start}*/, #f9f9f6 /*{a-bup-background-end}*/); /* Chrome 10 , Saf5.1  */
+	background-image:    -moz-linear-gradient( #f9f9f6 /*{a-bup-background-start}*/, #f9f9f6 /*{a-bup-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #f9f9f6 /*{a-bup-background-start}*/, #f9f9f6 /*{a-bup-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #f9f9f6 /*{a-bup-background-start}*/, #f9f9f6 /*{a-bup-background-end}*/); /* Opera 11.10  */
+	background-image:         linear-gradient( #f9f9f6 /*{a-bup-background-start}*/, #f9f9f6 /*{a-bup-background-end}*/);
 }
 .ui-btn-up-a:visited,
 .ui-btn-up-a a.ui-link-inherit {
@@ -130,16 +140,16 @@ input, textarea {
 }
 .ui-btn-hover-a {
 	border: 1px solid #3e3332 /*{a-bhover-border}*/;
-	background: #bfbfbf /*{a-bhover-background-color}*/;
+	background: #aeadad /*{a-bhover-background-color}*/;
 	font-weight: bold;
 	color: #000000 /*{a-bhover-color}*/;
 	text-shadow: 0 /*{a-bhover-shadow-x}*/ 1px /*{a-bhover-shadow-y}*/ 0 /*{a-bhover-shadow-radius}*/ #ffffff /*{a-bhover-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #bfbfbf /*{a-bhover-background-start}*/), to( #bfbfbf /*{a-bhover-background-end}*/)); /* Saf4 , Chrome */
-	background-image: -webkit-linear-gradient( #bfbfbf /*{a-bhover-background-start}*/, #bfbfbf /*{a-bhover-background-end}*/); /* Chrome 10 , Saf5.1  */
-	background-image:    -moz-linear-gradient( #bfbfbf /*{a-bhover-background-start}*/, #bfbfbf /*{a-bhover-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #bfbfbf /*{a-bhover-background-start}*/, #bfbfbf /*{a-bhover-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #bfbfbf /*{a-bhover-background-start}*/, #bfbfbf /*{a-bhover-background-end}*/); /* Opera 11.10  */
-	background-image:         linear-gradient( #bfbfbf /*{a-bhover-background-start}*/, #bfbfbf /*{a-bhover-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #aeadad /*{a-bhover-background-start}*/), to( #aeadad /*{a-bhover-background-end}*/)); /* Saf4 , Chrome */
+	background-image: -webkit-linear-gradient( #aeadad /*{a-bhover-background-start}*/, #aeadad /*{a-bhover-background-end}*/); /* Chrome 10 , Saf5.1  */
+	background-image:    -moz-linear-gradient( #aeadad /*{a-bhover-background-start}*/, #aeadad /*{a-bhover-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #aeadad /*{a-bhover-background-start}*/, #aeadad /*{a-bhover-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #aeadad /*{a-bhover-background-start}*/, #aeadad /*{a-bhover-background-end}*/); /* Opera 11.10  */
+	background-image:         linear-gradient( #aeadad /*{a-bhover-background-start}*/, #aeadad /*{a-bhover-background-end}*/);
 }
 .ui-btn-hover-a:visited,
 .ui-btn-hover-a:hover,
@@ -148,26 +158,26 @@ input, textarea {
 }
 .ui-btn-down-a {
 	border: 1px solid #000000 /*{a-bdown-border}*/;
-	background: #4e4646 /*{a-bdown-background-color}*/;
+	background: #bbe97c /*{a-bdown-background-color}*/;
 	font-weight: bold;
-	color: #ffffff /*{a-bdown-color}*/;
+	color: #000000 /*{a-bdown-color}*/;
 	text-shadow: 0 /*{a-bdown-shadow-x}*/ 0 /*{a-bdown-shadow-y}*/ 0 /*{a-bdown-shadow-radius}*/ #ffffff /*{a-bdown-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #4e4646 /*{a-bdown-background-start}*/), to( #4e4646 /*{a-bdown-background-end}*/)); /* Saf4 , Chrome */
-	background-image: -webkit-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* Chrome 10 , Saf5.1  */
-	background-image:    -moz-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/); /* Opera 11.10  */
-	background-image:         linear-gradient( #4e4646 /*{a-bdown-background-start}*/, #4e4646 /*{a-bdown-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #bbe97c /*{a-bdown-background-start}*/), to( #bbe97c /*{a-bdown-background-end}*/)); /* Saf4 , Chrome */
+	background-image: -webkit-linear-gradient( #bbe97c /*{a-bdown-background-start}*/, #bbe97c /*{a-bdown-background-end}*/); /* Chrome 10 , Saf5.1  */
+	background-image:    -moz-linear-gradient( #bbe97c /*{a-bdown-background-start}*/, #bbe97c /*{a-bdown-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #bbe97c /*{a-bdown-background-start}*/, #bbe97c /*{a-bdown-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #bbe97c /*{a-bdown-background-start}*/, #bbe97c /*{a-bdown-background-end}*/); /* Opera 11.10  */
+	background-image:         linear-gradient( #bbe97c /*{a-bdown-background-start}*/, #bbe97c /*{a-bdown-background-end}*/);
 }
 .ui-btn-down-a:visited,
 .ui-btn-down-a:hover,
 .ui-btn-down-a a.ui-link-inherit {
-	color: #ffffff /*{a-bdown-color}*/;
+	color: #000000 /*{a-bdown-color}*/;
 }
 .ui-btn-up-a,
 .ui-btn-hover-a,
 .ui-btn-down-a {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 /* B
@@ -206,7 +216,7 @@ input, textarea {
 .ui-bar-b select,
 .ui-bar-b textarea,
 .ui-bar-b button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-b,
 .ui-overlay-b {
@@ -230,7 +240,7 @@ input, textarea {
 .ui-body-b select,
 .ui-body-b textarea,
 .ui-body-b button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-b .ui-link-inherit {
 	color: #333333 /*{b-body-color}*/;
@@ -304,7 +314,7 @@ input, textarea {
 .ui-btn-up-b,
 .ui-btn-hover-b,
 .ui-btn-down-b {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -345,7 +355,7 @@ input, textarea {
 .ui-bar-c select,
 .ui-bar-c textarea,
 .ui-bar-c button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-c,
 .ui-overlay-c {
@@ -369,7 +379,7 @@ input, textarea {
 .ui-body-c select,
 .ui-body-c textarea,
 .ui-body-c button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-c .ui-link-inherit {
 	color: #333333 /*{c-body-color}*/;
@@ -443,7 +453,7 @@ input, textarea {
 .ui-btn-up-c,
 .ui-btn-hover-c,
 .ui-btn-down-c {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -484,7 +494,7 @@ input, textarea {
 .ui-bar-d select,
 .ui-bar-d textarea,
 .ui-bar-d button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-d,
 .ui-overlay-d {
@@ -508,7 +518,7 @@ input, textarea {
 .ui-body-d select,
 .ui-body-d textarea,
 .ui-body-d button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-d .ui-link-inherit {
 	color: #333333 /*{d-body-color}*/;
@@ -582,7 +592,7 @@ input, textarea {
 .ui-btn-up-d,
 .ui-btn-hover-d,
 .ui-btn-down-d {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 /* B
@@ -621,7 +631,7 @@ input, textarea {
 .ui-bar-b select,
 .ui-bar-b textarea,
 .ui-bar-b button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-b,
 .ui-overlay-b {
@@ -645,7 +655,7 @@ input, textarea {
 .ui-body-b select,
 .ui-body-b textarea,
 .ui-body-b button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-b .ui-link-inherit {
 	color: #333333 /*{b-body-color}*/;
@@ -719,7 +729,7 @@ input, textarea {
 .ui-btn-up-b,
 .ui-btn-hover-b,
 .ui-btn-down-b {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -760,7 +770,7 @@ input, textarea {
 .ui-bar-c select,
 .ui-bar-c textarea,
 .ui-bar-c button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-c,
 .ui-overlay-c {
@@ -784,7 +794,7 @@ input, textarea {
 .ui-body-c select,
 .ui-body-c textarea,
 .ui-body-c button {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-c .ui-link-inherit {
 	color: #333333 /*{c-body-color}*/;
@@ -858,7 +868,7 @@ input, textarea {
 .ui-btn-up-c,
 .ui-btn-hover-c,
 .ui-btn-down-c {
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -874,20 +884,20 @@ a.ui-link-inherit {
 /* Active class used as the "on" state across all themes
 -----------------------------------------------------------------------------------------------------------*/
 .ui-btn-active {
-	border: 1px solid #890b0b /*{global-active-border}*/;
-	background: #bc2624 /*{global-active-background-color}*/;
+	border: 1px solid #222f14 /*{global-active-border}*/;
+	background: #65ad18 /*{global-active-background-color}*/;
 	font-weight: bold;
 	color: #ffffff /*{global-active-color}*/;
 	cursor: pointer;
-	text-shadow: 0 /*{global-active-shadow-x}*/ 0 /*{global-active-shadow-y}*/ 0 /*{global-active-shadow-radius}*/ 0 /*{global-active-shadow-color}*/;
+	text-shadow: 0 /*{global-active-shadow-x}*/ 0 /*{global-active-shadow-y}*/ 0 /*{global-active-shadow-radius}*/ #444444 /*{global-active-shadow-color}*/;
 	text-decoration: none;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #c12725 /*{global-active-background-start}*/), to( #b62422 /*{global-active-background-end}*/)); /* Saf4 , Chrome */
-	background-image: -webkit-linear-gradient( #c12725 /*{global-active-background-start}*/, #b62422 /*{global-active-background-end}*/); /* Chrome 10 , Saf5.1  */
-	background-image:    -moz-linear-gradient( #c12725 /*{global-active-background-start}*/, #b62422 /*{global-active-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #c12725 /*{global-active-background-start}*/, #b62422 /*{global-active-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #c12725 /*{global-active-background-start}*/, #b62422 /*{global-active-background-end}*/); /* Opera 11.10  */
-	background-image:         linear-gradient( #c12725 /*{global-active-background-start}*/, #b62422 /*{global-active-background-end}*/);
-	  font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #65ad18 /*{global-active-background-start}*/), to( #65ad18 /*{global-active-background-end}*/)); /* Saf4 , Chrome */
+	background-image: -webkit-linear-gradient( #65ad18 /*{global-active-background-start}*/, #65ad18 /*{global-active-background-end}*/); /* Chrome 10 , Saf5.1  */
+	background-image:    -moz-linear-gradient( #65ad18 /*{global-active-background-start}*/, #65ad18 /*{global-active-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #65ad18 /*{global-active-background-start}*/, #65ad18 /*{global-active-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #65ad18 /*{global-active-background-start}*/, #65ad18 /*{global-active-background-end}*/); /* Opera 11.10  */
+	background-image:         linear-gradient( #65ad18 /*{global-active-background-start}*/, #65ad18 /*{global-active-background-end}*/);
+	    font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-btn-active:visited,
 .ui-btn-active:hover,
@@ -1142,7 +1152,7 @@ a.ui-link-inherit {
 }
 .ui-checkbox-on .ui-icon,
 .ui-radio-on .ui-icon {
-	background-color: #bc2624 /*{global-active-background-color}*/; /* NOTE: this hex should match the active state color. It's repeated here for cascade */
+	background-color: #65ad18 /*{global-active-background-color}*/; /* NOTE: this hex should match the active state color. It's repeated here for cascade */
 }
 /* loading icon */
 .ui-icon-loading {
@@ -1208,15 +1218,15 @@ a.ui-link-inherit {
 }
 .ui-focus,
 .ui-btn:focus {
-	-moz-box-shadow: inset 0 0 3px #bc2624 /*{global-active-background-color}*/, 0 0 9px #bc2624 /*{global-active-background-color}*/;
-	-webkit-box-shadow: inset 0 0 3px #bc2624 /*{global-active-background-color}*/, 0 0 9px #bc2624 /*{global-active-background-color}*/;
-	box-shadow: inset 0 0 3px #bc2624 /*{global-active-background-color}*/, 0 0 9px #bc2624 /*{global-active-background-color}*/;
+	-moz-box-shadow: inset 0 0 3px #65ad18 /*{global-active-background-color}*/, 0 0 9px #65ad18 /*{global-active-background-color}*/;
+	-webkit-box-shadow: inset 0 0 3px #65ad18 /*{global-active-background-color}*/, 0 0 9px #65ad18 /*{global-active-background-color}*/;
+	box-shadow: inset 0 0 3px #65ad18 /*{global-active-background-color}*/, 0 0 9px #65ad18 /*{global-active-background-color}*/;
 }
 .ui-input-text.ui-focus,
 .ui-input-search.ui-focus {
-	-moz-box-shadow: 0 0 12px #bc2624 /*{global-active-background-color}*/;
-	-webkit-box-shadow: 0 0 12px #bc2624 /*{global-active-background-color}*/;
-	box-shadow: 0 0 12px #bc2624 /*{global-active-background-color}*/;	
+	-moz-box-shadow: 0 0 12px #65ad18 /*{global-active-background-color}*/;
+	-webkit-box-shadow: 0 0 12px #65ad18 /*{global-active-background-color}*/;
+	box-shadow: 0 0 12px #65ad18 /*{global-active-background-color}*/;	
 }
 /* unset box shadow in browsers that don't do it right
 -----------------------------------------------------------------------------------------------------------*/
@@ -1232,4 +1242,4 @@ a.ui-link-inherit {
 	outline-width: 1px;
 	outline-style: auto;
 }
-						
+												
