--- a/themes/WebClicker_main.css
+++ b/themes/WebClicker_main.css
@@ -11,37 +11,6 @@
 
 /* http://jquerymobile.com/themeroller/?ver=1.3.2&style_id=20131115-75
 
-/* this line detects browsers which have a minimum width of 600
-* pixels and only applies the changes to them */
-@media only screen and (min-width: 600px){
-	.ui-page {
-	width: 600px !important;
-	margin: 0 auto !important;
-	position: relative !important;
-	border-right: 5px #666 outset !important;
-	border-left: 5px #666 outset !important;
-	}
-}
-
-input, textarea, .ui-input-text {
-	background-color: white;
-}
-.error {
-	text-align:center;
-	color: red;
-	font-weight:bold;
-}
-h4{
-	color : #B72E22;
-}
-.bordered{
-	padding: 20px;
-	border:1px solid;
-	border-radius:10px;
-	box-shadow: 1px 1px 3px #888888;
-	margin: 10px;
-}
-
 /* Swatches */
 /* A
 -----------------------------------------------------------------------------------------------------------*/
@@ -1241,5 +1210,38 @@ a.ui-link-inherit {
 .ui-mobile-nosupport-boxshadow .ui-link-inherit:focus {
 	outline-width: 1px;
 	outline-style: auto;
+}
+
+/* Custom Styles */
+
+/* this line detects browsers which have a minimum width of 600
+* pixels and only applies the changes to them */
+@media only screen and (min-width: 600px){
+	.ui-page {
+	width: 600px !important;
+	margin: 0 auto !important;
+	position: relative !important;
+	border-right: 5px #666 outset !important;
+	border-left: 5px #666 outset !important;
+	}
+}
+
+.ui-input-text {
+	background-color: white;
+}
+.error {
+	text-align:center;
+	color: red;
+	font-weight:bold;
+}
+h4{
+	color : #B72E22;
+}
+.bordered{
+	padding: 20px;
+	border:1px solid;
+	border-radius:10px;
+	box-shadow: 1px 1px 3px #888888;
+	margin: 10px;
 }
 												
