fixed issue with legend pushing pie graph off page. tweak the colors if you would like at the top of results.php

--- a/themes/WebClicker_main.css
+++ b/themes/WebClicker_main.css
@@ -1244,9 +1244,10 @@ label {
 }
 .bordered{
 	padding: 20px;
-	border:1px solid;
+	border: 1px solid;
 	border-radius:10px;
 	box-shadow: 1px 1px 3px #888888;
-	margin: 10px;
+    overflow-y: visible;
+    margin: 10px auto;
 }
 												
